manifests/suspended/n8n/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /root/.n8n
            - name: n8n-backup
              mountPath: /home/node/backup
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: n8n-backup
          persistentVolumeClaim:
            claimName: n8n-backup
